# APS-DroneRF

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
data/: README.md
data/manifests/: dronerf_background_challenge_v1_plan.json  dronerf_demo_v2_manifest.json  dronerf_demo_v2_plan.json
informe/: memoria_final.tex
muestras_demo/: catalogo_privado.json
muestras_demo/sin_dron/: muestra_01.npz  muestra_02.npz  muestra_03.npz
notebooks/: 00_verificaciones_sinteticas.ipynb  01_exploracion_dronerf.ipynb  02_analisis_tiempo_fft_psd.ipynb  03_ventanas_y_bandas.ipynb  04_filtros_digitales.ipynb  05_caracteristicas_y_validacion.ipynb  06_resultados_finales.ipynb
resultados/: README.md
resultados/tables/: nb00_cuantizacion.csv  nb02_fft_frecuencias_dominantes.csv  nb02_resumen_temporal.csv  nb03_potencia_relativa_bandas.csv  nb03_tabla_ventanas.csv  nb03_ventanas_dronerf.csv  (+4 more)
scripts/: aplicar_politica_demo.py  auditar_robustez_detector.py  calibrar_detector_demo.py  check_environment.py  construir_caracteristicas_demo.py  create_run_manifest.py  ejecutar_demo.py  ensayar_demo_tecnico.py  estresar_entrada_demo.py  evaluar_configuraciones_demo.py  evaluar_controles_sinteticos.py  evaluar_demo_ciega.py  evaluar_desafio_fondo_externo.py  evaluar_ruido_demo.py  export_memoria_pdf.py  exportar_caso_estudio.py  exportar_resultados_demo.py  generar_figura_robustez.py  preparar_dataset_demo.py  preparar_muestras_demo.py  reconstruir_caracteristicas_desde_zip.py  run_sensitivity.py  run_synthetic_checks.py  verificar_compuerta_calidad.py
(+64 files in other folders)
